VYRKCATG-65, VYRKCATG-31, VYRKCATG-41

--- a/docroot/themes/custom/gearwrench/gearwrench.breakpoints.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.breakpoints.yml
@@ -1,30 +1,76 @@
-gearwrench.extra_small:
-  label: mobile
-  mediaQuery: ''
+gearwrench.All:
+  label: All
+  mediaQuery: 'all'
   weight: 0
   multipliers:
     - 1x
-gearwrench.small:
-  label: mobile
-  mediaQuery: 'all and (min-width: 576px) and (max-width: 767px)'
+# max (29.99 x 16px == 479px)
+gearwrench.xsmall:
+  label: Extra Small (max)
+  mediaQuery: 'all and (max-width: 29.99rem)'
   weight: 1
   multipliers:
     - 1x
-gearwrench.medium:
-  label: narrow
-  mediaQuery: 'all and (min-width: 768px) and (max-width: 991px)'
+# min (30 x 16px ~= 480px)
+# max (35.49 x 16px == 767px)
+gearwrench.small_min:
+  label: Small (min)
+  mediaQuery: 'all and (min-width: 30rem)'
   weight: 2
   multipliers:
     - 1x
-gearwrench.large:
-  label: wide
-  mediaQuery: 'all and (min-width: 992px) and (max-width: 1199px)'
+gearwrench.small:
+  label: Small
+  mediaQuery: 'all and (min-width: 30rem) and (max-width: 35.49rem)'
+  weight: 2
+  multipliers:
+    - 1x
+# min (35.50 x 16px ~= 768px)
+# max (47.99 x 16px == 979px)
+gearwrench.medium_min:
+  label: Medium (min)
+  mediaQuery: 'all and (min-width: 35.50rem)'
   weight: 3
   multipliers:
     - 1x
-gearwrench.extra_large:
-  label: wide
-  mediaQuery: 'all and (min-width: 1200px)'
+gearwrench.medium:
+  label: Medium
+  mediaQuery: 'all and (min-width: 35.50rem) and (max-width: 47.99rem)'
+  weight: 3
+  multipliers:
+    - 1x
+# min (48 x 16px ~= 980px)
+# max (61.24 x 16px == 1279px)
+gearwrench.large_min:
+  label: Large
+  mediaQuery: 'all and (min-width: 48rem)'
   weight: 4
+  multipliers:
+    - 1x
+gearwrench.large:
+  label: Large
+  mediaQuery: 'all and (min-width: 48rem) and (max-width: 61.24rem)'
+  weight: 4
+  multipliers:
+    - 1x
+# min (61.25 x 16px ~= 1280px)
+# max (79.99 x 16px == 1449px)
+gearwrench.xlarge_min:
+  label: Extra Large (min)
+  mediaQuery: 'all and (min-width: 61.25rem)'
+  weight: 5
+  multipliers:
+    - 1x
+gearwrench.xlarge:
+  label: Extra Large
+  mediaQuery: 'all and (min-width: 61.25rem) and (max-width: 79.99rem)'
+  weight: 5
+  multipliers:
+    - 1x
+# min (80 x 16px ~= 1500px)
+gearwrench.grande:
+  label: Grande (min)
+  mediaQuery: 'all and (min-width: 80rem)'
+  weight: 6
   multipliers:
     - 1x
