--- a/config/gearwrench/default/webform.webform.email_sign_up.yml
+++ b/config/gearwrench/default/webform.webform.email_sign_up.yml
@@ -12,7 +12,7 @@ id: email_sign_up
 title: 'Email Sign Up'
 description: 'A form to collect email submissions.'
 category: ''
-elements: "flexbox_1:\n  '#type': webform_flexbox\n  '#align_items': center\n  first_name:\n    '#type': textfield\n    '#title': 'First Name'\n    '#title_display': invisible\n    '#placeholder': 'First Name'\n  last_name:\n    '#type': textfield\n    '#title': 'Last Name'\n    '#title_display': invisible\n    '#placeholder': 'Last Name'\nflexbox_02:\n  '#type': webform_flexbox\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n    '#title_display': invisible\n    '#placeholder': 'Email Address'\n    '#required': true\n    '#required_error': Required"
+elements: "flexbox_1:\n  '#type': webform_flexbox\n  '#align_items': center\n  first_name:\n    '#type': textfield\n    '#title': 'First Name'\n    '#title_display': invisible\n    '#placeholder': 'First Name'\n  last_name:\n    '#type': textfield\n    '#title': 'Last Name'\n    '#title_display': invisible\n    '#placeholder': 'Last Name'\nflexbox_03:\n  '#type': webform_flexbox\n  privacy_policy:\n    '#type': checkbox\n    '#title': 'Privacy Policy'\n    '#required': true\n    '#required_error': Required\n    '#wrapper_attributes':\n      class:\n        - form-checkboxes\nflexbox_02:\n  '#type': webform_flexbox\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n    '#title_display': invisible\n    '#placeholder': 'Email Address'\n    '#required': true\n    '#required_error': Required"
 css: ''
 javascript: ''
 settings:
