VYRKCATG-84, VYRKCATG-83, VYRKCATG-82, VYRKCATG-95

--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
         "drupal/paragraphs_ee": "1.x-dev@dev",
         "drupal/pathauto": "^1.6",
         "drupal/permissions_filter": "^1.0",
+        "drupal/quick_node_clone": "^1.14",
         "drupal/recaptcha": "^3.0",
         "drupal/redirect": "^1.0",
         "drupal/robotstxt": "^1.3",
