--- a/docroot/themes/custom/gearwrench/gearwrench.breakpoints.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.breakpoints.yml
@@ -12,7 +12,7 @@ gearwrench.xsmall:
   multipliers:
     - 1x
 # min (30 x 16px ~= 480px)
-# max (35.49 x 16px == 767px)
+# max (35.49 x 16px ~= 568px)
 gearwrench.small_min:
   label: Small (min)
   mediaQuery: 'all and (min-width: 30rem)'
@@ -25,8 +25,8 @@ gearwrench.small:
   weight: 2
   multipliers:
     - 1x
-# min (35.50 x 16px ~= 768px)
-# max (47.99 x 16px == 979px)
+# min (35.50 x 16px ~= 568px)
+# max (47.99 x 16px ~= 767px)
 gearwrench.medium_min:
   label: Medium (min)
   mediaQuery: 'all and (min-width: 35.50rem)'
@@ -39,8 +39,8 @@ gearwrench.medium:
   weight: 3
   multipliers:
     - 1x
-# min (48 x 16px ~= 980px)
-# max (61.24 x 16px == 1279px)
+# min (48 x 16px ~= 768px)
+# max (61.24 x 16px ~= 979px)
 gearwrench.large_min:
   label: Large
   mediaQuery: 'all and (min-width: 48rem)'
@@ -53,8 +53,8 @@ gearwrench.large:
   weight: 4
   multipliers:
     - 1x
-# min (61.25 x 16px ~= 1280px)
-# max (79.99 x 16px == 1449px)
+# min (61.25 x 16px ~= 980px)
+# max (79.99 x 16px ~= 1279px)
 gearwrench.xlarge_min:
   label: Extra Large (min)
   mediaQuery: 'all and (min-width: 61.25rem)'
@@ -67,7 +67,7 @@ gearwrench.xlarge:
   weight: 5
   multipliers:
     - 1x
-# min (80 x 16px ~= 1500px)
+# min (80 x 16px ~= 1200px)
 gearwrench.grande:
   label: Grande (min)
   mediaQuery: 'all and (min-width: 80rem)'
