--- a/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.teaser.yml
@@ -17,29 +17,31 @@ dependencies:
     - field.field.node.product.field_upc
     - node.type.product
   module:
-    - text
     - user
 id: node.product.teaser
 targetEntityType: node
 bundle: product
 mode: teaser
 content:
-  body:
+  field_long_description:
+    type: string
+    weight: 1
+    region: content
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
     settings:
-      trim_length: 600
+      link_to_entity: false
     third_party_settings: {  }
+  field_media:
+    type: entity_reference_entity_view
+    weight: 0
     region: content
-  links:
-    weight: 100
-    settings: {  }
+    label: hidden
+    settings:
+      view_mode: teaser
+      link: false
     third_party_settings: {  }
-    region: content
 hidden:
-  field_long_description: true
-  field_media: true
+  body: true
   field_product_classifications: true
   field_product_features: true
   field_product_images: true
@@ -48,3 +50,4 @@ hidden:
   field_set_components: true
   field_sku_group: true
   field_upc: true
+  links: true
