--- a/config/gearwrench/default/responsive_image.styles.teaser.yml
+++ b/config/gearwrench/default/responsive_image.styles.teaser.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.medium_1x1
     - image.style.small_1x1
     - image.style.tiny_1x1
   theme:
@@ -18,8 +17,7 @@ image_style_mappings:
     image_mapping:
       sizes: '(min-width: 80.01rem) 261px, (min-width: 35.51rem) 43vw, 100vw'
       sizes_image_styles:
-        - medium_1x1
         - small_1x1
         - tiny_1x1
 breakpoint_group: gearwrench
-fallback_image_style: medium_1x1
+fallback_image_style: small_1x1
