--- a/config/gearwrench/default/field.field.media.remote_video.field_media_video_embed_field.yml
+++ b/config/gearwrench/default/field.field.media.remote_video.field_media_video_embed_field.yml
@@ -20,5 +20,8 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  allowed_providers: {  }
+  allowed_providers:
+    vimeo: vimeo
+    youtube: youtube
+    youtube_playlist: youtube_playlist
 field_type: video_embed_field
