Warranty and contact form configs

--- a/config/gearwrench/default/field.field.paragraph.tabs_tab.field_components.yml
+++ b/config/gearwrench/default/field.field.paragraph.tabs_tab.field_components.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
+    - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.tabs
@@ -44,6 +45,7 @@ settings:
       pullquote: pullquote
       section: section
       tabs: tabs
+      product_slider: product_slider
     target_bundles_drag_drop:
       accordion:
         weight: -31
@@ -78,6 +80,9 @@ settings:
       hero_slide:
         weight: -17
         enabled: false
+      product_slider:
+        enabled: true
+        weight: 28
       pullquote:
         enabled: true
         weight: -22
