--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -114,6 +114,7 @@ module:
   video_embed_media: 0
   viewsreference: 0
   webform: 0
+  webform_attachment: 0
   webform_submission_export_import: 0
   webform_ui: 0
   limited_field_widgets: 1
