--- a/config/gearwrench/default/webform.webform.contact_us.yml
+++ b/config/gearwrench/default/webform.webform.contact_us.yml
@@ -1,4 +1,4 @@
-uuid: 04f5ed8c-dd19-4cbd-a9e3-53a8afc58c7b
+uuid: 93d3410e-6751-45e1-bff8-b1d393c07c8d
 langcode: en
 status: open
 dependencies: {  }
@@ -8,11 +8,11 @@ weight: 0
 uid: 1
 template: false
 archive: false
-id: email_sign_up
-title: 'Email Sign Up'
-description: 'A form to collect email submissions.'
+id: contact_us
+title: 'Contact Us'
+description: 'Contact form for Gearwrench.'
 category: ''
-elements: "flexbox_1:\n  '#type': webform_flexbox\n  '#align_items': center\n  first_name:\n    '#type': textfield\n    '#title': 'First Name'\n    '#title_display': invisible\n    '#placeholder': 'First Name'\n  last_name:\n    '#type': textfield\n    '#title': 'Last Name'\n    '#title_display': invisible\n    '#placeholder': 'Last Name'\nflexbox_03:\n  '#type': webform_flexbox\n  privacy_policy:\n    '#type': checkbox\n    '#title': 'Privacy Policy'\n    '#required': true\n    '#required_error': Required\n    '#wrapper_attributes':\n      class:\n        - form-checkboxes\nflexbox_02:\n  '#type': webform_flexbox\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n    '#title_display': invisible\n    '#placeholder': 'Email Address'\n    '#required': true\n    '#required_error': Required\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#states':\n    disabled:\n      - ':input[name=\"privacy_policy\"]':\n          unchecked: true\n      - or\n      - ':input[name=\"email_address\"]':\n          empty: true"
+elements: "select_type:\n  '#type': select\n  '#title': 'Select Type'\n  '#options':\n    'Become a Distributor': 'Become a Distributor'\n    'Product Feedback': 'Product Feedback'\n    'Product Technical Question': 'Product Technical Question'\n    'Warranty/Replacement Parts/Repair': 'Warranty/Replacement Parts/Repair'\n    'Sales Quote': 'Sales Quote'\n    'Tools Truck': 'Tools Truck'\n    'Add/Adjust Your Location Information': 'Add/Adjust Your Location Information'\n  '#required': true\n  '#required_error': Required\n  '#default_value': 'Product Technical Question'\nbrand:\n  '#type': textfield\n  '#title': Brand\n  '#states':\n    visible:\n      ':input[name=\"select_type\"]':\n        value: 'Product Technical Question'\n  '#required': true\nproduct_model_number:\n  '#type': textfield\n  '#title': 'Product Model Number'\n  '#required': true\n  '#required_error': Required\n  '#states':\n    visible:\n      - ':input[name=\"select_type\"]':\n          value: 'Product Feedback'\n      - or\n      - ':input[name=\"select_type\"]':\n          value: 'Product Technical Question'\n      - or\n      - ':input[name=\"select_type\"]':\n          value: 'Warranty/Replacement Parts/Repair'\nbusiness_name:\n  '#type': textfield\n  '#title': 'Business Name'\n  '#required_error': Required\nname:\n  '#type': textfield\n  '#title': Name\nemail_address:\n  '#type': email\n  '#title': 'Email Address'\naddress:\n  '#type': webform_address\n  '#title': Address\n  '#required': true\n  '#address__required': true\n  '#address_2__access': false\n  '#city__required': true\n  '#state_province__required': true\n  '#country__required': true\nphone_number:\n  '#type': tel\n  '#title': 'Phone Number'\nrequest_comments:\n  '#type': textarea\n  '#title': Request/Comments\nupload_an_excel_document:\n  '#type': webform_document_file\n  '#title': 'Upload an excel document'\n  '#states':\n    visible:\n      ':input[name=\"select_type\"]':\n        value: 'Add/Adjust Your Location Information'\n  '#file_extensions': xlsx\n  '#sanitize': true"
 css: ''
 javascript: ''
 settings:
@@ -30,7 +30,7 @@ settings:
   form_exception_message: ''
   form_open_message: ''
   form_close_message: ''
-  form_previous_submissions: false
+  form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
   form_disable_remote_addr: false
