--- a/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
+++ b/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
@@ -1,4 +1,4 @@
-uuid: 04f5ed8c-dd19-4cbd-a9e3-53a8afc58c7b
+uuid: d22065a3-f2ce-4b36-84d0-b64e7c78c33f
 langcode: en
 status: open
 dependencies: {  }
@@ -8,11 +8,11 @@ weight: 0
 uid: 1
 template: false
 archive: false
-id: email_sign_up
-title: 'Email Sign Up'
-description: 'A form to collect email submissions.'
+id: warranty_replacement_form
+title: 'Warranty/Replacement Form'
+description: 'Warranty/Replacement Form for Gearwrench.'
 category: ''
-elements: "flexbox_1:\n  '#type': webform_flexbox\n  '#align_items': center\n  first_name:\n    '#type': textfield\n    '#title': 'First Name'\n    '#title_display': invisible\n    '#placeholder': 'First Name'\n  last_name:\n    '#type': textfield\n    '#title': 'Last Name'\n    '#title_display': invisible\n    '#placeholder': 'Last Name'\nflexbox_03:\n  '#type': webform_flexbox\n  privacy_policy:\n    '#type': checkbox\n    '#title': 'Privacy Policy'\n    '#required': true\n    '#required_error': Required\n    '#wrapper_attributes':\n      class:\n        - form-checkboxes\nflexbox_02:\n  '#type': webform_flexbox\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n    '#title_display': invisible\n    '#placeholder': 'Email Address'\n    '#required': true\n    '#required_error': Required\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#states':\n    disabled:\n      - ':input[name=\"privacy_policy\"]':\n          unchecked: true\n      - or\n      - ':input[name=\"email_address\"]':\n          empty: true"
+elements: "product_information:\n  '#type': container\n  item_number:\n    '#type': textfield\n    '#title': 'Item Number'\n  product_image:\n    '#type': webform_image_file\n    '#title': 'Product Image'\n    '#required': true\n    '#required_error': Required\n    '#max_filesize': '5'\n    '#sanitize': true\n  receipt_image:\n    '#type': webform_image_file\n    '#title': 'Receipt Image'\n    '#max_filesize': '5'\n    '#sanitize': true\n  message:\n    '#type': textarea\n    '#title': Message\n    '#required': true\n    '#required_error': Required\n  purchased_from:\n    '#type': textfield\n    '#title': 'Where did you purchase this item from?'\npersonal_information:\n  '#type': container\n  first_name:\n    '#type': textfield\n    '#title': 'First Name'\n    '#required': true\n    '#required_error': Required\n  last_name:\n    '#type': textfield\n    '#title': 'Last Name'\n    '#required': true\n    '#required_error': Required\n  email_address:\n    '#type': email\n    '#title': 'Email Address'\n    '#required': true\n    '#required_error': Required\n  phone_number:\n    '#type': tel\n    '#title': 'Phone Number'\n    '#required': true\n    '#required_error': Required\n  address:\n    '#type': webform_address\n    '#title': Address\n    '#required': true\n    '#address__title': 'Street Address'\n    '#address__required': true\n    '#address_2__access': false\n    '#city__title': City\n    '#city__required': true\n    '#state_province__title': State\n    '#postal_code__title': 'Zip Code'\n    '#country__access': false\n  warranty_and_privacy_policy:\n    '#type': checkbox\n    '#title': 'I agree to the GEARWRENCH Warranty and Privacy Policy'\n    '#required': true\n    '#required_error': Required\n  email_opt_in:\n    '#type': checkbox\n    '#title': 'Subscribe to GEARWRENCH email distribution list'\n  actions:\n    '#type': webform_actions\n    '#title': 'Submit button(s)'"
 css: ''
 javascript: ''
 settings:
@@ -30,7 +30,7 @@ settings:
   form_exception_message: ''
   form_open_message: ''
   form_close_message: ''
-  form_previous_submissions: false
+  form_previous_submissions: true
   form_confidential: false
   form_confidential_message: ''
   form_disable_remote_addr: false
