--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/block_class": "^1.1",
         "drupal/block_field": "^1.0@alpha",
         "drupal/classy_paragraphs": "^1.0@beta",
+        "drupal/color_field": "^2.4",
         "drupal/config_export_ignore": "^1.1",
         "drupal/config_ignore": "^2.0",
         "drupal/config_split": "^1.0",
@@ -57,6 +58,7 @@
         "drupal/diff": "^1.0@RC",
         "drupal/editor_file": "^1.0",
         "drupal/email_registration": "^1.0@RC",
+        "drupal/entity_clone": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/environment_indicator": "^4.0",
         "drupal/extlink": "^1.6",
