--- a/config/gearwrench/default/core.entity_form_display.paragraph.content.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.paragraph.content.default.yml
@@ -26,7 +26,7 @@ third_party_settings:
         - field_class_custom
         - field_html_anchor
       parent_name: group_content
-      weight: 1
+      weight: 4
       format_type: settings
       format_settings:
         id: ''
@@ -35,8 +35,8 @@ third_party_settings:
       region: content
     group_tabs:
       children:
-        - group_content
         - group_media
+        - group_content
       parent_name: ''
       weight: 0
       format_type: tabs
@@ -45,6 +45,7 @@ third_party_settings:
         classes: ''
         direction: horizontal
       label: Tabs
+      region: content
     group_content:
       children:
         - group_settings
@@ -52,7 +53,7 @@ third_party_settings:
         - field_content
         - field_link
       parent_name: group_tabs
-      weight: 20
+      weight: 8
       format_type: tab
       format_settings:
         id: ''
@@ -61,12 +62,13 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Content
+      region: content
     group_media:
       children:
         - field_media_layout
         - field_media_item
       parent_name: group_tabs
-      weight: 21
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -75,6 +77,7 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Media
+      region: content
 _core:
   default_config_hash: JaKrJ_BHXgrxiTdDfqo4ijAe_G7ZOOBLwjtM-MBEmMw
 id: paragraph.content.default
@@ -83,7 +86,7 @@ bundle: content
 mode: default
 content:
   field_class_custom:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -91,7 +94,7 @@ content:
     type: string_textfield
     region: content
   field_content:
-    weight: 3
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
@@ -99,7 +102,7 @@ content:
     type: text_textarea
     region: content
   field_html_anchor:
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: 'Example: find-out-more'
@@ -107,7 +110,7 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 4
+    weight: 7
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -135,7 +138,7 @@ content:
     type: options_select
     region: content
   field_title:
-    weight: 2
+    weight: 5
     settings:
       size: 60
       placeholder: ''
