--- a/config/gearwrench/default/core.entity_view_display.paragraph.content.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.content.full.yml
@@ -83,12 +83,10 @@ content:
       caption:
         title: '0'
         alt: '0'
-      iframe_lazy: true
       icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      optionset: default
       skin: ''
       style: ''
       box_caption: ''
@@ -99,6 +97,15 @@ content:
       grid_header: ''
       grid_medium: 0
       grid_small: 0
+      class: ''
+      id: ''
+      image: ''
+      link: ''
+      overlay: ''
+      title: ''
+      vanilla: false
+      fx: ''
+      _uri: ''
     third_party_settings: {  }
   field_title:
     type: string
