--- a/config/gearwrench/default/core.entity_view_display.paragraph.section.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.section.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.section.field_background_color
     - field.field.paragraph.section.field_class_custom
     - field.field.paragraph.section.field_components
     - field.field.paragraph.section.field_html_anchor
@@ -10,6 +11,7 @@ dependencies:
     - field.field.paragraph.section.field_style
     - paragraphs.paragraphs_type.section
   module:
+    - color_field
     - entity_reference_revisions
     - image
 _core:
@@ -19,6 +21,15 @@ targetEntityType: paragraph
 bundle: section
 mode: default
 content:
+  field_background_color:
+    weight: 5
+    label: above
+    settings:
+      format: hex
+      opacity: true
+    third_party_settings: {  }
+    type: color_field_formatter_text
+    region: content
   field_class_custom:
     weight: 1
     label: above
