--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -22,6 +22,7 @@ module:
   ckeditor: 0
   classy_paragraphs: 0
   color: 0
+  color_field: 0
   config: 0
   config_export_ignore: 0
   config_filter: 0
@@ -36,6 +37,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   editor_file: 0
+  entity_clone: 0
   entity_reference_revisions: 0
   environment_indicator: 0
   environment_indicator_ui: 0
