--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -211,6 +211,13 @@ paragraph--full--content:
     component:
       css/libraries/paragraph/full--content.css: {}
 
+# Content Callout #
+paragraph--full--content-callout:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--content-callout.css: {}
+
 # Hero #
 paragraph--full--hero:
   version: 1.x
