--- a/config/gearwrench/default/core.entity_view_display.paragraph.product_slider.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.product_slider.default.yml
@@ -9,14 +9,6 @@ id: paragraph.product_slider.default
 targetEntityType: paragraph
 bundle: product_slider
 mode: default
-content:
-  field_products:
-    weight: 0
-    label: visually_hidden
-    settings:
-      view_mode: teaser
-      link: false
-    third_party_settings: {  }
-    type: entity_reference_entity_view
-    region: content
-hidden: {  }
+content: {  }
+hidden:
+  field_products: true
