Created js and configs for webform accordion

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -396,3 +396,14 @@ region--footer-first:
       css/libraries/region/footer.css: {}
 
 # ========= Views ========= #
+
+# ========= Forms ========= #
+webform--warranty-replacement-form:
+  version: 1.x
+  js:
+    js/libraries/webform/form--accordion.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench/library--jquery-roving-tabindex
