added accordion css to warranty form yml

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -407,8 +407,11 @@ region--footer-first:
 # ========= Forms ========= #
 webform--warranty-replacement-form:
   version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--accordion.css: { }
   js:
-    js/libraries/webform/form--accordion.js: {}
+    js/libraries/webform/form--accordion.js: {weight: -10}
   dependencies:
     - core/drupal
     - core/jquery
