--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -179,6 +179,14 @@ node--teaser--product:
     component:
       css/libraries/node/teaser--product.css: { }
 
+# === Node: Tile === #
+
+node--tile--product-listing:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/tile--product-listing.css: { }
+
 # ========= Paragraphs ========= #
 
 # === Paragraph: Full === #
@@ -403,6 +411,14 @@ region--footer-first:
       css/libraries/region/footer.css: {}
 
 # ========= Views ========= #
+
+# ========= Views ========= #
+
+view--product-listing-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-listing-grid.css: {}
 
 # ========= Forms ========= #
 webform--warranty-replacement-form:
