--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -379,7 +379,12 @@ paragraph--full--tabs:
     - core/jquery.once
     - gearwrench/library--jquery-roving-tabindex
 
-
+# Steps #
+paragraph--full--steps:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--steps.css: {}
 
 # ========= Region ========= #
 
