Add this back in for PT :)

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,18 @@
                     "type": "zip"
                 }
             }
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "furf/jquery-ui-touch-punch",
+                "version": "1.0",
+                "type": "drupal-library",
+                "dist": {
+                    "url": "https://github.com/furf/jquery-ui-touch-punch/archive/refs/heads/master.zip",
+                    "type": "zip"
+                }
+            }
         }
     ],
     "require": {
@@ -111,6 +123,7 @@
         "drupal/viewsreference_filter": "^1.0",
         "drupal/webform": "^6.0",
         "drush/drush": "^10.3",
+        "furf/jquery-ui-touch-punch": "^1.0",
         "topfloor/composer-cleanup-vcs-dirs": "^1.1",
         "vlucas/phpdotenv": "^5.3",
         "vmlyr-drupal/bazo": "^8.0",
