Added steps to preprocess, updated css for background color, added fields to steps and re-ordered step field

--- a/config/gearwrench/default/core.entity_view_display.paragraph.steps.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.steps.full.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.full
+    - field.field.paragraph.steps.field_background_color
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
+    - field.field.paragraph.steps.field_style
     - field.field.paragraph.steps.field_title
     - paragraphs.paragraphs_type.steps
   module:
@@ -34,5 +36,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
+  field_background_color: true
   field_class_custom: true
   field_html_anchor: true
+  field_style: true
