--- a/config/gearwrench/default/core.entity_form_display.paragraph.steps.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.paragraph.steps.default.yml
@@ -3,12 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.steps.field_background_color
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
+    - field.field.paragraph.steps.field_style
     - field.field.paragraph.steps.field_title
     - paragraphs.paragraphs_type.steps
   module:
+    - color_field
     - field_group
     - limited_field_widgets
     - paragraphs
@@ -18,7 +21,9 @@ third_party_settings:
       children:
         - status
         - field_html_anchor
+        - field_style
         - field_class_custom
+        - field_background_color
       parent_name: ''
       weight: 0
       format_type: settings
@@ -37,8 +42,16 @@ targetEntityType: paragraph
 bundle: steps
 mode: default
 content:
+  field_background_color:
+    weight: 5
+    settings:
+      placeholder_color: ''
+      placeholder_opacity: ''
+    third_party_settings: {  }
+    type: color_field_widget_default
+    region: content
   field_class_custom:
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -73,6 +86,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_style:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_title:
     weight: 1
