--- a/config/gearwrench/default/core.entity_view_display.paragraph.steps.default.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.steps.default.yml
@@ -3,20 +3,32 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.steps.field_background_color
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
+    - field.field.paragraph.steps.field_style
     - field.field.paragraph.steps.field_title
     - paragraphs.paragraphs_type.steps
   module:
+    - color_field
     - entity_reference_revisions
 id: paragraph.steps.default
 targetEntityType: paragraph
 bundle: steps
 mode: default
 content:
+  field_background_color:
+    weight: 5
+    label: above
+    settings:
+      format: hex
+      opacity: true
+    third_party_settings: {  }
+    type: color_field_formatter_text
+    region: content
   field_class_custom:
-    weight: 1
+    weight: 0
     label: above
     settings:
       link_to_entity: false
@@ -24,7 +36,7 @@ content:
     type: string
     region: content
   field_components:
-    weight: 3
+    weight: 4
     label: above
     settings:
       view_mode: default
@@ -33,12 +45,20 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_html_anchor:
-    weight: 0
+    weight: 3
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_style:
+    weight: 1
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_title:
     weight: 2
