--- a/config/gearwrench/default/core.entity_view_display.paragraph.steps.preview.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.steps.preview.yml
@@ -4,13 +4,34 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
+    - field.field.paragraph.steps.field_background_color
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
+    - field.field.paragraph.steps.field_style
     - field.field.paragraph.steps.field_title
     - paragraphs.paragraphs_type.steps
   module:
     - entity_reference_revisions
+    - field_group
+third_party_settings:
+  field_group:
+    group_settings:
+      children:
+        - field_style
+        - field_class_custom
+        - field_html_anchor
+      parent_name: ''
+      weight: 3
+      format_type: details
+      region: content
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: false
+        required_fields: false
+      label: Settings
 id: paragraph.steps.preview
 targetEntityType: paragraph
 bundle: steps
@@ -18,14 +39,14 @@ mode: preview
 content:
   field_class_custom:
     type: string
-    weight: 0
+    weight: 1
     region: content
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
   field_components:
-    weight: 3
+    weight: 2
     label: above
     settings:
       view_mode: default
@@ -35,18 +56,27 @@ content:
     region: content
   field_html_anchor:
     type: string
+    weight: 2
+    region: content
+    label: inline
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_style:
+    type: entity_reference_label
+    weight: 0
+    region: content
+    label: inline
+    settings:
+      link: false
+    third_party_settings: {  }
+  field_title:
+    type: string
     weight: 1
     region: content
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
-  field_title:
-    type: string
-    weight: 2
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_background_color: true
