--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_product_attributes.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_product_attributes.yml
@@ -82,11 +82,15 @@ process:
         - ATT714721
         - ATT714704
         - Brand
+        - ATT745346
         - ATT714693
         - CasePackQty
         - ATT738
         - ATT704222
+        - 'Catalog Number'
+        - ATT800719
         - ATT714717
+        - ATT714713
         - ATT714732
         - ATT776
         - ATT777459
@@ -96,6 +100,7 @@ process:
         - ATT919
         - ATT672479
         - CustomerPrice
+        - CurrencyCode
         - DeliveryUnit
         - SAP_Description
         - ATT22025
@@ -108,6 +113,7 @@ process:
         - ATT207
         - ATT210
         - ATT714694
+        - ATT932
         - ATT714719
         - ATT737269
         - ATT583415
@@ -120,7 +126,10 @@ process:
         - ATT714718
         - MUSAICON
         - ATT595
+        - 'SAP Sales Org Status'
+        - null
         - 'SAP Material Status'
+        - ATT375
         - ATT556
         - ATT714730
         - ATT714706
@@ -166,27 +175,6 @@ process:
         - ATT540
         - ATT714702
         - ATT789979
-        - ATT15714
-        - ATT793609
-        - ATT15716
-        - ATT15715
-        - ATT15720
-        - ATT15702
-        - ATT793611
-        - ATT15717
-        - ATT793612
-        - ATT15700
-        - ATT15710
-        - ATT15701
-        - ATT793613
-        - ATT793614
-        - ATT15708
-        - ATT15712
-        - ATT15709
-        - ATT672478
-        - ATT672481
-        - AMZN
-        - ATT23047
     -
       plugin: machine_name
     -
