VYRKCATG-14: Added the search block config.

--- a/config/gearwrench/default/block.block.header_search_block.yml
+++ b/config/gearwrench/default/block.block.header_search_block.yml
@@ -1,4 +1,4 @@
-uuid: 72decc81-5244-4152-8bfb-899518d9d17a
+uuid: 5f219fdb-6f4e-4b87-a193-d77ebdf86fb5
 langcode: en
 status: true
 dependencies:
@@ -9,16 +9,16 @@ dependencies:
     - gearwrench
 third_party_settings:
   block_class:
-    classes: block--country-switch
-id: country_switch_block
+    classes: block--header-search
+id: header_search_block
 theme: gearwrench
 region: header
-weight: -3
+weight: -4
 provider: null
-plugin: country_switch
+plugin: header_search
 settings:
-  id: country_switch
-  label: 'Country Switch Block'
+  id: header_search
+  label: 'Header Search Block'
   provider: gearwrench_core
   label_display: '0'
 visibility: {  }
