--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -184,6 +184,14 @@ node--teaser--product:
     component:
       css/libraries/node/teaser--product.css: { }
 
+# === Node: Tile === #
+
+node--tile--product-listing:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/tile--product-listing.css: { }
+
 # ========= Paragraphs ========= #
 
 # === Paragraph: Full === #
@@ -361,6 +369,13 @@ paragraph--full--section:
   css:
     component:
       css/libraries/paragraph/full--section.css: {}
+
+# Steps #
+paragraph--full--steps:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--steps.css: {}
 
 # Tabs #
 paragraph--full--tabs:
