Let's stop breaking Terrence's stuff...

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -434,8 +434,14 @@ view--related-products:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
     - gearwrench/library--swiper
+    - core/jquery.once
+
+view--product-listing-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-listing-grid.css: {}
 
 # ========= Forms ========= #
 webform--warranty-replacement-form:
