--- a/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.search_index.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
@@ -37,6 +38,7 @@ content:
       link: ''
     third_party_settings: {  }
 hidden:
+  field_link: true
   field_media: true
   field_meta_tags: true
   links: true
