--- a/config/gearwrench/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - image.style.small_1x1
@@ -97,5 +98,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_components: true
+  field_link: true
   field_meta_tags: true
   links: true
