--- a/config/gearwrench/default/core.entity_view_display.node.page.block_title.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.page.block_title.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.block_title
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
     - node.type.page
@@ -21,6 +22,7 @@ content: {  }
 hidden:
   body: true
   field_components: true
+  field_link: true
   field_media: true
   field_meta_tags: true
   links: true
