feature/VYRKCATG-109: Created the 2 column content paragraph.

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -224,6 +224,13 @@ paragraph--full--content:
     component:
       css/libraries/paragraph/full--content.css: {}
 
+# Content #
+paragraph--full--content-2-column:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--content-2-column.css: {}
+
 # Content Callout #
 paragraph--full--content-callout:
   version: 1.x
