--- a/config/gearwrench/default/core.entity_view_display.paragraph.steps.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.paragraph.steps.full.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.full
-    - field.field.paragraph.steps.field_background_color
+    - field.field.paragraph.steps.field_background_color_list
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
@@ -36,7 +36,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
-  field_background_color: true
+  field_background_color_list: true
   field_class_custom: true
   field_html_anchor: true
   field_style: true
