--- a/config/gearwrench/default/core.entity_form_display.paragraph.steps.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.paragraph.steps.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.steps.field_background_color
+    - field.field.paragraph.steps.field_background_color_list
     - field.field.paragraph.steps.field_class_custom
     - field.field.paragraph.steps.field_components
     - field.field.paragraph.steps.field_html_anchor
@@ -11,7 +11,6 @@ dependencies:
     - field.field.paragraph.steps.field_title
     - paragraphs.paragraphs_type.steps
   module:
-    - color_field
     - field_group
     - limited_field_widgets
     - paragraphs
@@ -20,10 +19,10 @@ third_party_settings:
     group_settings:
       children:
         - status
+        - field_background_color_list
         - field_html_anchor
         - field_style
         - field_class_custom
-        - field_background_color
       parent_name: ''
       weight: 0
       format_type: settings
@@ -42,16 +41,14 @@ targetEntityType: paragraph
 bundle: steps
 mode: default
 content:
-  field_background_color:
-    weight: 5
-    settings:
-      placeholder_color: ''
-      placeholder_opacity: ''
+  field_background_color_list:
+    weight: 2
+    settings: {  }
     third_party_settings: {  }
-    type: color_field_widget_default
+    type: options_select
     region: content
   field_class_custom:
-    weight: 4
+    weight: 5
     settings:
       size: 60
       placeholder: ''
@@ -80,7 +77,7 @@ content:
     type: paragraphs
     region: content
   field_html_anchor:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -88,7 +85,7 @@ content:
     type: string_textfield
     region: content
   field_style:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
