--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -169,6 +169,7 @@ node--full--product:
       css/libraries/node/full--product.css: { }
   js:
     js/libraries/node/full--product.js: {}
+    https://apps.bazaarvoice.com/deployments/gearwrench/main_site/production/en_US/bv.js: { type: external, async: true, minified: true }
   dependencies:
     - core/drupal
     - core/jquery
